// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptAttr(Type) should override script type from config: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	  result.type = 'module';
"
`;

exports[`ScriptAttr(Type) should override script type from options: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	  result.type = 'application/json';
"
`;
